Updated settings page h1 tags to use localized versions of strings.

--- a/app/views/users/delete_account.html.haml
+++ b/app/views/users/delete_account.html.haml
@@ -10,7 +10,7 @@
   = render partial: "users/mobile_menu", locals: {selected: :account}
 
   %h1
-    Delete account
+    = t('users.edit account_existence')
 
   %p= t('users.delete account description')
   = form_tag user_path(@user), method: :delete do
