--- a/app/views/moments/_note.html.haml
+++ b/app/views/moments/_note.html.haml
@@ -25,7 +25,7 @@
       - if detail_view and moment.references.present?
         .moment-no-refs
           - moment.references.each do |ref_hash|  #{"human"=>"John 1:5", "version_id"=>1, "usfm"=>["JHN.1.5"]}
-            = link_to(ref_hash.human, reference_path(version: ref_hash.version_id, reference: ref_hash.usfm.sort.join("+")), class: "moment-no-refs-link")
+            = link_to(ref_hash.human, reference_path(version: ref_hash.version_id, reference: ref_hash.usfm.join("+")), class: "moment-no-refs-link")
 
       .moment-no-note
         %p.moment-no-note-title
