add max height and overflow hidden to notes moment content

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -469,6 +469,8 @@ body.transition .moment
   border: 1px solid #F5E5B0
   border-bottom: 0
   font-size: 13px
+  max-height: 230px
+  overflow: hidden
 
 .moment-no-note-title
   background: image-url("moment-no-note-title-bg.png") repeat-y left top
