no max height for notes when viewed in detail view

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -470,7 +470,10 @@ body.transition .moment
   border-bottom: 0
   font-size: 13px
   max-height: 230px
-  overflow: hidden
+  overflow: hidden 
+
+.moment-no-note.detail-view
+  max-height: none
 
 .moment-no-note-title
   background: image-url("moment-no-note-title-bg.png") repeat-y left top
