Flattened the mobile header

--- a/app/assets/stylesheets/mobile/_header.sass
+++ b/app/assets/stylesheets/mobile/_header.sass
@@ -18,7 +18,7 @@
 #header,
 .reader_modal_header
   -webkit-font-smoothing: subpixel-antialiased
-  background: #333 image-url("header.png") repeat-x
+  background-color: #222
   font-size: 11px
   height: 45px
   border-radius: 0px
