--- a/app/views/moments/_note.html.haml
+++ b/app/views/moments/_note.html.haml
@@ -1,10 +1,10 @@
 :ruby
   # Locals Parameters
-  # moment - a single Moment to display  (Bookmark, Highlight, Note)
-  # comments_displayed - boolean, true or false (whether or not to display comments when rendering html)
-
+  # moment              - a single Moment to display  (Bookmark, Highlight, Note)
+  # comments_displayed  - boolean, true or false (whether or not to display comments when rendering html)
+  # detail_view         - boolean, true or false (whether this is a detail view or a card view)
+  
   detail_view = false unless local_assigns.has_key? :detail_view
-
   avatars = moment.avatars
   avatar = avatars.lg_avatar
 
