adjust add friend option in mobile to follow remove friend pattern, fix the red bkg on hover for desktop

--- a/app/assets/stylesheets/mobile/_user.sass
+++ b/app/assets/stylesheets/mobile/_user.sass
@@ -308,6 +308,18 @@ article.profile
     right: 0
     background: image-url("friend-request-sprite.png") no-repeat center -128px #D30000
 
+  .friend-details-add
+    position: absolute
+    height: 36px
+    width: 36px
+    +border-radius(36px)
+    overflow: hidden
+    text-indent: 100%
+    white-space: nowrap
+    top: 27px
+    right: 0
+    background: image-url("friend-request-sprite.png") no-repeat center 4px #00B400  
+
   .friends-none
     padding: 110px 0 0
 
