Capture pagination data, only show pagination link for moment views when there is a next page.

--- a/app/views/moments/index.html.haml
+++ b/app/views/moments/index.html.haml
@@ -9,4 +9,5 @@
     = render partial: "moments/cards", locals: {moments: @moments, comments_displayed: true}
 
 
-= render partial: "shared/moments_load_more", locals: {resource: "moments"}
+- if @moments.next_page
+  = render partial: "shared/moments_load_more", locals: {resource: "moments"}
