--- a/app/views/users/bookmarks.html.haml
+++ b/app/views/users/bookmarks.html.haml
@@ -21,9 +21,9 @@
   .social-feed-wrap
     .social-feed
       = render partial: "moments/cards", locals: {moments: @bookmarks, comments_displayed: false}
+  - if @bookmarks.next_page
+    = render partial: "shared/moments_load_more", locals: {resource: "bookmarks", url_params: ["user_id=#{@user.username}"]}
 
-
-  = render partial: "shared/moments_load_more", locals: {resource: "bookmarks", url_params: ["user_id=#{@user.username}"]}
 - else
   .profile-blank-slate.slate-bookmarks
     - if current_user_is? @user
