--- a/app/views/users/notes.html.haml
+++ b/app/views/users/notes.html.haml
@@ -8,8 +8,9 @@
   .social-feed-wrap
     .social-feed
       = render partial: "moments/cards", locals: {moments: @notes,comments_displayed: false}
-
-  = render partial: "shared/moments_load_more", locals: {resource: "notes", url_params: ["user_id=#{@user.username}"]}
+  - if @notes.next_page
+    = render partial: "shared/moments_load_more", locals: {resource: "notes", url_params: ["user_id=#{@user.username}"]}
+    
 - else
   .profile-blank-slate.slate-notes
     - if current_user_is? @user
