--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -8,7 +8,7 @@
       = render partial: "moments/cards", locals: {moments: @moments, comments_displayed: false}
 
   - if @moments.next_page
-    = render partial: "shared/moments_load_more", locals: {resource: "users", url_params: ["user_id=#{@user.username}"]}
+    = render partial: "shared/moments_load_more", locals: {resource: "users", url_params: ["uid=#{@user.id}"]}
 
 - else
   .profile-blank-slate.slate-activity
