--- a/app/assets/stylesheets/mobile/_user.sass
+++ b/app/assets/stylesheets/mobile/_user.sass
@@ -269,7 +269,7 @@ article.profile
   .friend-directory-title
     margin: 0
 
-  .friend-details
+  .friend-detail
     position: relative
     border-bottom: 1px dotted #e1e1e1
     width: auto
@@ -277,10 +277,10 @@ article.profile
     height: 90px
     margin: 0
 
-  .friend-details:nth-of-type(even)
+  .friend-detail:nth-of-type(even)
     margin: 0
 
-  .friend-details-avatar
+  .friend-detail-avatar
     width: 70px
     height: 70px
     +border-radius(70px)
@@ -289,14 +289,15 @@ article.profile
     left: 0
     top: 10px
 
-  .friend-details-name
+  .friend-detail-name
     margin: 0 0 -5px 85px
     padding: 31px 0 0
     font-size: 16px
     line-height: 1.2em
     width: 60%
 
-  .friend-details-delete
+  .friend-detail-add,
+  .friend-detail-delete
     position: absolute
     height: 36px
     width: 36px
@@ -306,18 +307,11 @@ article.profile
     white-space: nowrap
     top: 27px
     right: 0
+
+  .friend-detail-delete
     background: image-url("friend-request-sprite.png") no-repeat center -128px #D30000
 
-  .friend-details-add
-    position: absolute
-    height: 36px
-    width: 36px
-    +border-radius(36px)
-    overflow: hidden
-    text-indent: 100%
-    white-space: nowrap
-    top: 27px
-    right: 0
+  .friend-detail-add
     background: image-url("friend-request-sprite.png") no-repeat center 4px #00B400  
 
   .friends-none
