Show human readable reference on bookmark edit page.

--- a/app/assets/stylesheets/mobile/_dynamic_menus.sass
+++ b/app/assets/stylesheets/mobile/_dynamic_menus.sass
@@ -102,8 +102,7 @@
 #menu_book_chapter .scroll::-webkit-scrollbar,
 .version_select .scroll::-webkit-scrollbar,
 .full_page_form .color,
-.full_page_form .color_picker_list,
-#bookmark_update_btn
+.full_page_form .color_picker_list
   display: none
 
 .dynamic_menu.version_select th a
