--- a/app/views/bookmarks/_form.html.haml
+++ b/app/views/bookmarks/_form.html.haml
@@ -9,22 +9,28 @@
   %p
     = f.label :title, t("bookmarks.form.title field")
     = f.text_field :title
-
-  %p
-    = f.label :references, t("bookmarks.form.reference field")
-    - usfms = @bookmark.references.map {|refhash| refhash["usfm"]}
-    = joined_usfms = usfms.join(",")
-    = f.hidden_field :usfm_references, value: joined_usfms
   
   %p
     = f.label :labels, t("bookmarks.form.labels field")
     = f.text_field :labels, value: @bookmark.labels.join(",")
 
-  %p.color
-    = f.label :color, t("bookmarks.form.color field")
-    = f.text_field :color, class: 'float_left'
-    %div{:class => "color_picker_list", style: "width:auto; margin-top:-10px; margin-left:10px; margin-bottom: 20px"}
-      %a{:class => "color_picker", :href =>"#"}
-      %a{:class => "color_picker_holder", :href =>"#"}
-  %p#bookmark_update_btn{style: "clear: left"}
-    = f.submit(@bookmark.persisted? ? t("bookmarks.form.update button") : t("bookmarks.form.save button"))
+  - # PULLING color for now until we can add it back in properly.
+  - #%p.color
+  - #  = f.label :color, t("bookmarks.form.color field")
+  - #  = f.text_field :color, class: 'float_left'
+  - #  %div{:class => "color_picker_list", style: "width:auto; margin-top:-10px; margin-left:10px; margin-bottom: 20px; clear: both"}
+  - #    %a{:class => "color_picker", :href =>"#"}
+  - #    %a{:class => "color_picker_holder", :href =>"#"}
+
+  :ruby    
+    raw_refs = @bookmark.references
+    usfms    = raw_refs.collect {|refhash| refhash["usfm"]} #{"human"=>"John 1:5", "version_id"=>1, "usfm"=>["JHN.1.5"]}
+    human    = raw_refs.collect {|refhash| refhash["human"]}.join(", ")
+  %p  
+    = f.label :references, t("bookmarks.form.reference field")
+    = f.hidden_field :usfm_references, value: usfms.join(",")
+    %span.refs
+      = human
+
+  %p
+    = f.submit(@bookmark.persisted? ? t("bookmarks.form.update button") : t("bookmarks.form.save button"), class: "action_button_green")
