--- a/app/views/sidebars/plans/_button.html.haml
+++ b/app/views/sidebars/plans/_button.html.haml
@@ -4,8 +4,8 @@
 .widget-button
   - if current_auth
     -if current_user.subscribed_to?(plan)
-      = link_to(t('plans.read today'), user_subscription_path(current_user,id: plan.to_param), id: "subscription-read", class: 'action_button_green')
+      = link_to(t('plans.read today'), subscription_path(user_id: current_user.to_param,id: plan.to_param), id: "subscription-read", class: 'action_button_green')
     - else
-      = link_to(t('plans.subscribe to plan'), user_subscriptions_path(current_user, plan_id: plan.to_param), id: "subscription-start", class: 'action_button_green', method: :post)
+      = link_to(t('plans.subscribe to plan'), subscriptions_path(user_id: current_user.to_param, plan_id: plan.to_param), id: "subscription-start", class: 'action_button_green', method: :post)
   - else
     = link_to(t('plans.subscribe to plan'), sign_up_path(source: "plan", id: plan.id, redirect: plan_path(plan)), class: 'action_button_green')
