--- a/app/views/subscriptions/edit.html.haml
+++ b/app/views/subscriptions/edit.html.haml
@@ -8,8 +8,8 @@
 
 .tab_navigation.plan_settings.mobile
   .inner_wrapper
-    = link_to t("plans.settings"), edit_user_subscription_path(current_user, subscription),{class: "selected"}
-    = link_to t("plans.month"), calendar_user_subscription_path(current_user, subscription)
+    = link_to t("plans.settings"), edit_subscription_path(user_id: current_user.to_param, id: subscription),{class: "selected"}
+    = link_to t("plans.month"), calendar_subscription_path(user_id: current_user.to_param, id: subscription)
 
 %article
   %h1= t("plans.settings")
@@ -19,7 +19,7 @@
     %li#delivery-settings
       %div.wrapper
         %div.controls
-          = button_to(subscription.delivered_by_email? ? t('plans.email_off') : t('plans.email_on'),  user_subscription_path(current_user, subscription, email_delivery: (!subscription.delivered_by_email?).to_s), method: :put, class: 'action_button_green')
+          = button_to(subscription.delivered_by_email? ? t('plans.email_off') : t('plans.email_on'),  subscription_path(user_id: current_user.to_param, id: subscription, email_delivery: (!subscription.delivered_by_email?).to_s), method: :put, class: 'action_button_green')
           -if subscription.delivered_by_email?
             %div
               %p
@@ -33,7 +33,7 @@
 
       -if subscription.delivered_by_email?
 
-        = form_tag(user_subscription_path(current_user, subscription), method: :put) do
+        = form_tag(subscription_path(user_id: current_user.to_param, id: subscription), method: :put) do
           %div.time
             %h4.info= t("plans.delivery time")
             %div.controls
@@ -52,7 +52,7 @@
 
     %li#catchup-settings
       %div.controls
-        = button_to(t('plans.catch me up'), user_subscription_path(current_user,subscription,catch_up: "true"), method: :put, class: 'action_button_green')
+        = button_to(t('plans.catch me up'), subscription_path(user_id: current_user.to_param, id: subscription,catch_up: "true"), method: :put, class: 'action_button_green')
       %div.info
         %h3= t("plans.are you behind")
         - catch_up_text = subscription.last_completed_date ? t("plans.catch up text", last_completed_day: subscription.last_completed_day) : t("plans.catch up description only")
@@ -60,7 +60,7 @@
 
     %li#restart-settings
       %div.controls
-        = button_to(t('plans.restart'), user_subscription_path(current_user,subscription,restart: "true"), method: :put, class: 'action_button_green confirm', "data-confirm-text" => t("confirm danger"))
+        = button_to(t('plans.restart'), subscription_path(user_id: current_user.to_param, id: subscription,restart: "true"), method: :put, class: 'action_button_green confirm', "data-confirm-text" => t("confirm danger"))
       %div.info
         %h3= t("plans.do you want to reset")
         %p= t("plans.restart description")
@@ -69,13 +69,13 @@
       %a{name: "privacy"}
       %div.controls
         -if subscription.public?
-          = button_to(t('plans.make private'), user_subscription_path(current_user,subscription,make_private: "true"), method: :put, class: 'action_button_green')
+          = button_to(t('plans.make private'), subscription_path(user_id: current_user.to_param, id: subscription,make_private: "true"), method: :put, class: 'action_button_green')
         -else
-          = button_to(t('plans.make public'), user_subscription_path(current_user,subscription,make_public: "true"), method: :put, class: 'action_button_green')
+          = button_to(t('plans.make public'), subscription_path(user_id: current_user.to_param, id: subscription,make_public: "true"), method: :put, class: 'action_button_green')
       %div.info
         %h3= t("plans.privacy title")
         %p= t("plans.privacy description")
 
     %li#unsubscribe
-      = button_to(t('plans.stop reading'),user_subscription_path(current_user,subscription), method: :delete, id: "subscription-destroy", class: 'action_button_blue confirm', "data-confirm-text" => t("confirm danger"))
+      = button_to(t('plans.stop reading'),subscription_path(user_id: current_user.to_param,id: subscription), method: :delete, id: "subscription-destroy", class: 'action_button_blue confirm', "data-confirm-text" => t("confirm danger"))
 
