--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -1,4 +1,4 @@
-// Variables necessary for templates and partials to render properly
+-# Variables necessary for templates and partials to render properly
 :ruby
   reference      = @presenter.reference
   version        = @presenter.version
