--- a/app/views/references/_js.html.haml
+++ b/app/views/references/_js.html.haml
@@ -1,6 +1,6 @@
-// js partial shared amongs reader and invalid_ref partials.
-// Local Parameters
-// presenter: (required) Presenter::Reference or Presenter::Subscription
+-# js partial shared amongs reader and invalid_ref partials.
+-# Local Parameters
+-# presenter: (required) Presenter::Reference or Presenter::Subscription
 - reader_menus  = true
 - version       = presenter.version
 - reference     = presenter.reference
@@ -42,12 +42,12 @@
 
 // Render all necessary menus
 - if reader_menus == true
-  = render_cell :book_selector, :display, {version: version, presenter: @presenter}
-  = render_cell :version_selector, :display, {presenter: @presenter, version: version, recent_versions: recent_versions, reference: reference, site: @site}
+  = render partial: 'shared/book_selector', locals: {presenter: presenter}
+  = render_cell :version_selector, :display, {presenter: presenter, version: version, recent_versions: recent_versions, reference: reference, site: @site}
   - if modal_verse.present?
-    = render(partial:'/shared/modal_single_verse',locals: {modal_verse: modal_verse, reference: reference, version: version}) unless @verse_modals == false ||  modal_verse == nil
-  = render(partial: '/shared/menu_settings')
-  = render(partial: '/shared/menu_audio_player', locals: {reference: reference})
+    = render partial:'shared/modal_single_verse',locals: {modal_verse: modal_verse, reference: reference, version: version}  unless @verse_modals == false || modal_verse == nil
+  = render partial: 'shared/menu_settings'
+  = render partial: 'shared/menu_audio_player', locals: {reference: reference}
 
 // Dump a json representation of our @version into the markup for use by reader menus.
 // Would like to move this at some point to an API call if at all possible.
