--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -184,13 +184,7 @@ body.transition .moment
 
 // !Specific comments code
 
-.moment-comments-likes,
-.moment-comments-more
-  background: #EEEDEB image-url("social-actions-sprite.png") no-repeat
-  font-size: 13px
-
-.moment-comments-likes,
-.moment-comments-more
+.moment-comments-likes
   background: #EEEDEB image-url("social-actions-sprite.png") no-repeat
   font-size: 13px
 
@@ -199,8 +193,7 @@ body.transition .moment
   background-position: 10px -41px
 
 .moment-comments-more
-  padding-left: 35px
-  background-position: 10px -134px
+  padding: 3px 0 3px 11px
 
 .moment-comments-list
   margin-bottom: 0
@@ -307,6 +300,7 @@ body.transition .moment
       line-height: 1.1em
       padding: 5px 0 0 10px
       color: #444
+      display: block
 
       b
         color: #0084c8
@@ -328,6 +322,7 @@ body.transition .moment
 
 
 // Moments that have verses (currently bookmark and highlight)
+
 .moment-verse-wrap
   clear: both
   max-height: 250px
@@ -470,7 +465,7 @@ body.transition .moment
   border-bottom: 0
   font-size: 13px
   max-height: 230px
-  overflow: hidden 
+  overflow: hidden
 
 .moment-no-note.detail-view
   max-height: none
