Friends list pagination.

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -28,6 +28,9 @@
   background-color: #fff
   +border-radius(5px)
 
+#load-more.dark
+  background-color: #eee
+
 
 // !Moment containers
 body.transition .moment
