Prev and Next reader buttons work.

--- a/app/assets/stylesheets/_full_screen.sass
+++ b/app/assets/stylesheets/_full_screen.sass
@@ -61,17 +61,18 @@
 // `Previous & Next verse arrows
 //----------------------------------------------------------------------------------------------------
 
-.full_screen .nav_prev,
-.full_screen .nav_next
+.full_screen .reader-prev,
+.full_screen .reader-next,
   margin-left: 0
 
-.full_screen .nav_prev,
-.full_screen .nav_next.rtl
+.full_screen .reader-prev,
+.full_screen .reader-next.rtl
   background-position: 10px 48%
   margin-left: -82px
 
-.full_screen .nav_next,
-.full_screen .nav_prev.rtl
+.full_screen .reader-next,
+.full_screen .reader-prev.rtl
+
   margin-left: 740px
   background-position: -58px 48%
 
