--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -359,8 +359,8 @@ article[data-setting-show-highlights="false"] .verse.highlighted.dark_bg > .labe
 
 // `Nav Arrows
 //----------------------------------------------------------------------------------------------------
-.nav_prev,
-.nav_next
+.reader-prev,
+.reader-next
   background:
     image: image-url("arrow_sprite_thin.png")
     repeat: no-repeat
@@ -373,18 +373,18 @@ article[data-setting-show-highlights="false"] .verse.highlighted.dark_bg > .labe
   position: fixed
   border-radius: 4px
 
-.nav_prev,
-.nav_next.rtl
+.reader-prev,
+.reader-next.rtl
   background-position: 10px 48%
   margin-left: -55px
 
-.nav_next,
-.nav_prev.rtl
+.reader-next,
+.reader-prev.rtl
   margin-left: 473px
   background-position: -58px 48%
 
-.nav_prev:hover,
-.nav_next:hover
+.reader-prev:hover,
+.reader-next:hover
   background-color: #f1f1f1
 
 .snap
