--- a/app/assets/stylesheets/_parallel_mode.sass
+++ b/app/assets/stylesheets/_parallel_mode.sass
@@ -36,12 +36,12 @@
 .parallel_mode .float_right_in_parallel_mode
   float: right !important
 
-.parallel_mode .nav_prev,
-.parallel_mode .nav_next.rtl
+.parallel_mode .reader-prev,
+.parallel_mode .reader-next.rtl
   background-position: 10px 48%
   margin-left: -82px
 
-.parallel_mode .nav_next,
-.parallel_mode .nav_prev.rtl
+.parallel_mode .reader-next,
+.parallel_mode .reader-prev.rtl
   margin-left: 825px
   background-position: -58px 48%
