--- a/app/assets/stylesheets/mobile/_main_reader.sass
+++ b/app/assets/stylesheets/mobile/_main_reader.sass
@@ -358,8 +358,7 @@ div.close_tab
       width: 49.99%
       line-height: 48px
 
-
-.nav_items.audio-disabled
+.reader-nav.audio-disabled
   width: 170px
 
   ul
@@ -368,11 +367,11 @@ div.close_tab
     li.audio-disabled
       display: none
 
-article .nav_items,
+article .reader-nav,
 .search
   display: none
 
-.nav_items
+.reader-nav
   width: 212px
   height: 46px
   margin: 0 auto
