--- a/app/assets/stylesheets/mobile/_full_screen.sass
+++ b/app/assets/stylesheets/mobile/_full_screen.sass
@@ -1,17 +1,14 @@
 // `Previous & Next verse arrows
-//----------------------------------------------------------------------------------------------------
 
-.full_screen .nav_prev
-  left: 25px
+.full_screen
 
-.full_screen .nav_next
-  right: 40px
+  .reader-prev
+    left: 25px
 
+  .reader-next
+    right: 40px
 
-
-// `Re-position drop-down menus
-//----------------------------------------------------------------------------------------------------
-
-.full_screen #menu_bookmark .menu_arrow
-  left: auto
-  right: 10px
+  // `Re-position drop-down menus
+  #menu_bookmark .menu_arrow
+    left: auto
+    right: 10px
