--- a/app/views/references/_reader_header.html.haml
+++ b/app/views/references/_reader_header.html.haml
@@ -41,11 +41,15 @@
         %span.last
 
 #m-navitems.mobile
-  %div.nav_items{class: reference.audio ? nil : "audio-disabled"}
+  :ruby
+    direction = 'rtl' if version.try(:rtl?)
+    prev_chapter  = reference.previous_chapter
+    next_chapter  = reference.next_chapter
+  %div.reader-nav{class: reference.audio ? nil : "audio-disabled"}      
     %span.first
     %ul
       %li
-        = link_to("Prev", bible_path(reference.previous_chapter), class: "prev") if reference.previous_chapter
+        = link_to( prev_chapter.to_s, prev_chapter.to_path, class: "prev #{direction}") if prev_chapter
       %li
         %a.button.reader_settings_btn{:href => 'javascript:void(0);'}
           %span.icon_reader_settings
@@ -54,7 +58,7 @@
           %span.icon_listen
           =t("ref.listen")
       %li
-        = link_to("Next", bible_path(reference.next_chapter), class: "next") if reference.next_chapter
+        = link_to( next_chapter.to_s, next_chapter.to_path, class: "next #{direction}") if next_chapter
     %span.last
   %br.clear
 
