fix logged out header display

--- a/app/assets/stylesheets/_header.sass
+++ b/app/assets/stylesheets/_header.sass
@@ -116,8 +116,7 @@
   margin-top: 9px
   padding-top: 1px
   height: 31px
-  min-width: 280px
-
+  
 #header nav ul > li:first-child
   margin-left: 20px
   position: relative
@@ -133,6 +132,9 @@
   top: 50%
   left: -12px
 
+#header nav ul > li.auth:first-child:after
+  background: none
+  
 #header nav ul > .li_active
   +border-bottom-radius(0)
 
