--- a/app/views/shared/header/_default.html.haml
+++ b/app/views/shared/header/_default.html.haml
@@ -20,7 +20,7 @@
     %nav.sign_in
       - if current_auth
         %ul
-          %li
+          %li.auth
             %a#header_profile_trigger{:href => '#'}
               %span
                 %img{src: current_avatar}
