--- a/app/views/shared/header/_default.html.haml
+++ b/app/views/shared/header/_default.html.haml
@@ -7,14 +7,14 @@
 
     %a#logo{href: "/", style: "#{@site.logo_style}; background-image: url(#{asset_path(@site.logo_image)})"}
       = @site.title
+    - if current_auth
+      %a.friend-requests-btn.popover-link{href: "#", class: is_home_url ? 'home-url' : ''}
+        =t("friendships.requests title")
+      = render partial: "shared/header/requests"
 
-    %a.friend-requests-btn.popover-link{href: "#", class: is_home_url ? 'home-url' : ''}
-      =t("friendships.requests title")
-    = render partial: "shared/header/requests"
-
-    %a.notifications-btn.popover-link{href: "#", class: is_home_url ? 'home-url' : ''}
-      =t("notifications.title")
-    = render partial: "shared/header/notifications"
+      %a.notifications-btn.popover-link{href: "#", class: is_home_url ? 'home-url' : ''}
+        =t("notifications.title")
+      = render partial: "shared/header/notifications"
 
     -# Sign in and user id
     %nav.sign_in
